solve issues and upgrade functionnallity