@@ -6,6 +6,7 @@ import com.mx.mitienda.model.ProductCategory;
 import com.mx.mitienda.model.dto.ProductCategoryDTO;
 import com.mx.mitienda.model.dto.ProductCategoryResponseDTO;
 import com.mx.mitienda.repository.BusinessTypeRepository;
+import com.mx.mitienda.repository.ProductCategoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -16,6 +17,7 @@ import java.time.LocalDateTime;
 public class ProductCategoryMapper {
 
     private final BusinessTypeRepository businessTypeRepository;
+    private final ProductCategoryRepository productCategoryRepository;
 
     public ProductCategoryResponseDTO toResponse(ProductCategory category) {
         ProductCategoryResponseDTO dto = new ProductCategoryResponseDTO();
@@ -31,36 +33,57 @@ public class ProductCategoryMapper {
     }
     public ProductCategory toEntity(ProductCategoryDTO productCategoryDTO) {
 
-        if (productCategoryDTO.getName() == null || productCategoryDTO.getName().isBlank()) {
+        if (productCategoryDTO.getName() == null || productCategoryDTO.getName().trim().isEmpty()) {
             throw new IllegalArgumentException("El nombre de la categoría es obligatorio y no puede estar vacío.");
         }
 
         if (productCategoryDTO.getBusinessTypeId() == null) {
             throw new IllegalArgumentException("El ID del tipo de negocio es obligatorio.");
         }
+        String normalizedName = productCategoryDTO.getName().trim().replaceAll("\\s+", " ");
+
         BusinessType businessType = businessTypeRepository.findById(productCategoryDTO.getBusinessTypeId())
-                .orElseThrow(() -> new NotFoundException(
-                        "El tipo de negocio no se ha encontrado, intenta con otro."));
+                .orElseThrow(() -> new NotFoundException("El tipo de negocio no se ha encontrado, intenta con otro."));
+
+        if (productCategoryRepository.existsByBusinessTypeIdAndNameIgnoreCase(productCategoryDTO.getBusinessTypeId(), normalizedName)) {
+            throw new IllegalArgumentException("La categoría ya existe intenta crear otra diferente.");
+        }
+
         ProductCategory category = new ProductCategory();
-        category.setName(productCategoryDTO.getName());
+        category.setName(normalizedName);
         category.setBusinessType(businessType);
         category.setActivo(true);
         category.setFecha_creacion(LocalDateTime.now());
         return category;
-
     }
 
     public ProductCategory toUpdate(ProductCategory existing, ProductCategoryDTO dto) {
-        if (dto.getName() != null && !dto.getName().isBlank()) {
-            existing.setName(dto.getName());
-        }
-        // Si mandan un businessTypeId válido, actualiza
+
+        BusinessType finalBusinessType = existing.getBusinessType();
         if (dto.getBusinessTypeId() != null) {
-            BusinessType businessType = businessTypeRepository.findById(dto.getBusinessTypeId())
+            finalBusinessType = businessTypeRepository.findById(dto.getBusinessTypeId())
                     .orElseThrow(() -> new NotFoundException("Tipo de negocio no encontrado"));
-            existing.setBusinessType(businessType);
         }
-        existing.setFecha_creacion(LocalDateTime.now());
+        String finalName = existing.getName();
+        if (dto.getName() != null && !dto.getName().isBlank()) {
+            finalName = dto.getName().trim().replaceAll("\\s+", " ");
+        }
+
+        if (finalBusinessType != null && finalName != null && !finalName.isBlank()) {
+            boolean exists = productCategoryRepository
+                    .existsByBusinessTypeIdAndNameIgnoreCaseAndIdNot(
+                            finalBusinessType.getId(),
+                            finalName,
+                            existing.getId()
+                    );
+
+            if (exists) {
+                throw new IllegalArgumentException("La categoría ya existe. Intenta modificar otra.");
+            }
+        }
+        existing.setBusinessType(finalBusinessType);
+        existing.setName(finalName);
         return existing;
     }
+
 }
